<resources>
    <string name="app_name">First</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">微警务</string>
    <string name="title_notifications">我的</string>
    <string name="edit_phone">手机号码</string>
    <string name="edit_account_number">账号</string>
    <string name="edit_pass">密码</string>
    <string name="btn_login">登录</string>
    <string name="text_forget">忘记密码</string>
    <string name="text_register">注册</string>
    <string name="text_weichat">微信登录</string>
    <string name="text_notice_deatil">通知详情</string>
    <string name="text_weichats">微信</string>
    <string name="text_code">验证码</string>
    <string name="text_huocode">获取验证码</string>
    <string name="text_login_pass">请输入登录密码</string>
    <string name="text_sure_pass">确认密码</string>
    <string name="text_right_register">立即注册</string>
    <string name="text_register_xieyi">注册/登录即表示同意《服务协议》及《隐私政策》</string>
    <string name="text_change_phone">更换手机号</string>
    <string name="text_phone_num">手机号码</string>
    <string name="text_address_area">所在地区</string>
    <string name="text_new_phone_num">输入新的手机号码</string>
    <string name="text_yan_code">输入验证码</string>
    <string name="btn_submit">提交</string>
    <string name="btn_next">下一步</string>
    <string name="btn_submit_success">提交成功</string>
    <string name="text_person_infomation">个人资料</string>
    <string name="text_head">头像</string>
    <string name="text_name">昵称</string>
    <string name="text_hint_name">输入姓名</string>
    <string name="text_dianhua">电话</string>
    <string name="text_phone_number">13112345678</string>
    <string name="text_shenfenrenz">身份认证</string>
    <string name="text_setting">设置</string>
    <string name="text_choose_hosing">选择小区</string>
    <string name="text_homerenzheng">房主认证</string>
    <string name="text_household">房主</string>
    <string name="text_store">在线商城</string>
    <string name="text_hot_store">商品推荐</string>
    <string name="text_face_list">人脸列表</string>
    <string name="text_carrenzheng">车辆认证</string>
    <string name="text_yezhurenzheng">业主认证</string>
    <string name="text_doorrenzheng">门禁认证</string>
    <string name="text_zhuhuguanli">住户管理</string>
    <string name="text_carinformation">车辆信息</string>
    <string name="text_fee">物业费缴纳</string>
    <string name="text_door">门禁登记</string>
    <string name="text_fangkejilu">访客记录</string>
    <string name="text_visitor_reg">访客登记</string>
    <string name="text_baoxiujilu">报修记录</string>
    <string name="text_onlinebaoxiu">在线报修</string>
    <string name="text_jiaofeijilu">缴费记录</string>
    <string name="text_pay_center">缴费中心</string>
    <string name="text_bianminjiaofei">便民缴费</string>
    <string name="text_yijianfankui">意见反馈</string>
    <string name="text_lianxikefu">联系客服</string>
    <string name="text_xiaoqu">小区</string>
    <string name="text_now_state">当前状态:</string>
    <string name="text_shenfen">身份</string>
    <string name="text_address">地址:</string>
    <string name="text_address_list">收获地址列表</string>
    <string name="text_receive_address">收获地址</string>
    <string name="text_louhao">楼号</string>
    <string name="text_pay_classify">缴费分类:</string>
    <string name="text_payment_center">缴费中心</string>
    <string name="text_stopcar">停车费</string>
    <string name="text_danyuanhao">单元号</string>
    <string name="text_car_number">车牌号码</string>
    <string name="text_menpaihao">门派号</string>
    <string name="text_pay_explain">缴费说明:</string>
    <string name="text_pay_time">支付时间:</string>
    <string name="text_indent_number">订单编号:</string>
    <string name="text_choosedoor">选择房屋</string>
    <string name="text_safe">安全</string>
    <string name="text_qchn">清除缓存</string>
    <string name="text_banben">版本更新</string>
    <string name="text_aboutus">关于我们</string>
    <string name="text_update_pass">修改密码</string>
    <string name="text_back">退出</string>
    <string name="text_old_pass">旧密码</string>
    <string name="text_new_pass">输入新密码</string>
    <string name="text_sure_update">确认修改</string>
    <string name="text_descrip">故障描述</string>
    <string name="text_time">时间:</string>
    <string name="text_lianxiren">联系人:</string>
    <string name="text_phone">电话:</string>
    <string name="text_worklianxi">工作人员会尽快与您联系</string>
    <string name="text_lookdeail">查看详情</string>
    <string name="text_lookmx">查看明细</string>
    <string name="text_baoxiudeail">报修订单详情</string>
    <string name="text_backhome">返回首页</string>
    <string name="btn_textcancle">取消</string>
    <string name="text_fixcar">固定车位</string>
    <string name="text_linshicar">临时停车</string>
    <string name="text_carnumber">车牌号码:</string>
    <string name="text_yucunzhouqi">预存周期:</string>
    <string name="text_money">金额:</string>
    <string name="text_paymoney">支付金额</string>
    <string name="text_payresult">支付结果</string>
    <string name="text_rightpay">立即支付</string>
    <string name="text_choosecar">选择车辆</string>
    <string name="text_choosehome">选择房屋</string>
    <string name="text_cometime">进入时间:</string>
    <string name="text_livetime">离开时间:</string>
    <string name="text_stoptime">停留时间:</string>
    <string name="text_paytype">支付方式:</string>
    <string name="text_paystatus">支付状态:</string>
    <string name="text_payerror">支付异常</string>
    <string name="text_pays">支付</string>
    <string name="text_paysuccess">支付成功</string>
    <string name="text_payagain">重新支付</string>
    <string name="text_wyfjn">物业费缴纳</string>
    <string name="text_wyf">物业费</string>
    <string name="text_nopay">未缴账单</string>
    <string name="text_payzq">账单周期:</string>
    <string name="text_shouldpaytime">应交日期:</string>
    <string name="text_alerdpay">已缴账单</string>
    <string name="text_shouldpaymoney">应缴金额:</string>
    <string name="text_all">全选</string>
    <string name="text_pay">付款</string>
    <string name="text_sure">确定</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_home_list">住户列表</string>
    <string name="text_household_info">住户信息</string>
    <string name="text_authenticated">已认证</string>
    <string name="text_upload_face_photos">上传人脸照片</string>
    <string name="text_dsp">待审批</string>
    <string name="text_feedbackcontent">反馈内容</string>
    <string name="text_face_authentica">添加人脸认证</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
