<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon_start"
        android:hint="@string/edit_phone"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        />
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_phone"
        android:hint="@string/edit_pass"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_50"
        android:layout_below="@+id/edit_password"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/shape_login"
        android:text="@string/btn_login"
        android:textColor="#333333"
        android:textSize="@dimen/sp_16"
        />
    <TextView
        android:id="@+id/text_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forget"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_25"
        android:textColor="#cccccc"
        android:textSize="@dimen/sp_12"
        />
    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_25"
        android:textColor="#cccccc"
        android:textSize="@dimen/sp_12"
        android:layout_alignParentRight="true"
        />

    <ImageView
        android:id="@+id/icon_wechat"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_500"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_weichat"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/icon_wechat"
        android:layout_marginTop="@dimen/dp_15"
        />

</RelativeLayout>
