<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_wyf"
        android:textSize="@dimen/sp_14"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/dp_15"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payzq"
        android:textSize="@dimen/sp_14"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/dp_15"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_paystatus"
        android:textSize="@dimen/sp_14"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/dp_15"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/transparent"
        android:layout_marginTop="@dimen/dp_8"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_shouldpaymoney"
        android:textSize="@dimen/sp_14"
        android:textColor="#000000"
        android:layout_marginTop="@dimen/dp_15"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <CheckBox
            android:id="@+id/checkbox_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            />

    </RelativeLayout>
</LinearLayout>
