<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <LinearLayout
        android:id="@+id/lin_change_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/shape_login"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/relative_change_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"


            >

            <TextView
                android:id="@+id/text_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/blacks"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="@string/text_phone_num"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edit_new_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_toRightOf="@+id/text_phone_number"
                android:background="@null"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/sp_14"
                android:hint="@string/text_new_phone_num" />
        </RelativeLayout>

        <View
            android:id="@+id/view_change_phone_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/relative_change_two"
            android:layout_marginTop="@dimen/dp_1" />

        <RelativeLayout
            android:id="@+id/relative_change_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:layout_below="@+id/view_change_phone_two">

            <TextView
                android:id="@+id/text_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_25"
                android:text="@string/text_code"
                android:textColor="@color/blacks"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edit_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/text_code"
                android:background="@null"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp_14"
                android:hint="@string/text_yan_code" />

            <Button
                android:id="@+id/btn_huo_code"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_30"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/shape_blue"
                android:text="@string/text_huocode"
                android:textColor="@color/blue" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_below="@+id/lin_change_phone"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/renzheng_shape"
        android:text="@string/text_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

</RelativeLayout>
