<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCCCCC"
    tools:context=".activity.BaoXiuTiShiActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="#ffffff"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit_success"
            android:layout_centerInParent="true"
            android:textSize="@dimen/sp_16"
            android:textColor="#333333"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_80"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_success"
        android:layout_centerInParent="true"
        android:textSize="@dimen/sp_16"
        android:textColor="#333333"
        android:layout_marginTop="@dimen/dp_40"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_worklianxi"
        android:layout_centerInParent="true"
        android:textSize="@dimen/sp_16"
        android:textColor="#333333"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <Button
        android:id="@+id/btn_lookdeail"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/shape_orange"
        android:text="@string/text_lookdeail"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_marginLeft="@dimen/dp_25"
        />
    <Button
        android:id="@+id/btn_homeback"
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_40"
        android:background="@drawable/shape_orange"
        android:text="@string/text_backhome"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_100"
        />

    </LinearLayout>

</LinearLayout>