<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    >
    <RelativeLayout
        android:id="@+id/relative_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_89"
        android:background="#ffffff"
        >

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            />
        <TextView
            android:id="@+id/text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_person_infomation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_25"
            android:textSize="@dimen/sp_20"
            />


    </RelativeLayout>
    <View
        android:id="@+id/view_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_12"
        android:layout_below="@+id/relative_one"
        />
    <RelativeLayout
        android:id="@+id/relative_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/view_one"
        android:background="#ffffff"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/text_head"
            android:textSize="@dimen/sp_14" />
        <ImageView
            android:id="@+id/my_yue"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_launcher_background"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_39"
            android:layout_marginTop="@dimen/dp_10"
            />

    </RelativeLayout>
    <View
        android:id="@+id/view_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/relative_two"
        />
    <RelativeLayout
        android:id="@+id/relative_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/view_two"
        android:background="#ffffff"
        >
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_18"
            />
        <TextView
            android:id="@+id/my_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hint_name"
            android:textSize="@dimen/sp_14"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_39"
            android:layout_marginTop="@dimen/dp_19"
            />
    </RelativeLayout>
    <View
        android:id="@+id/view_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/relative_three"
        />
    <RelativeLayout
        android:id="@+id/relative_four"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/view_three"
        android:background="#ffffff"
        >
        <TextView
            android:id="@+id/text_dingdan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dianhua"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_18"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_number"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_15"
            />

        <ImageView
            android:id="@+id/icon_mydingdan"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_17"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_19"
            />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_above="@id/relative_sfrz"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_height="@dimen/dp_1"
        android:background="#ececec"
        />

    <RelativeLayout
        android:id="@+id/relative_sfrz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/relative_four"
        android:background="#ffffff"
        >
        <TextView
            android:id="@+id/text_shenfenrenzheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shenfenrenz"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_18"
            />

        <ImageView
            android:id="@+id/icon_shenfenrenzheng"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_17"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_19"
            />
    </RelativeLayout>
    <View
        android:id="@+id/view_four"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_12"
        android:layout_below="@+id/relative_sfrz"
        />
    <RelativeLayout
        android:id="@+id/relative_five"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_below="@+id/view_four"
        android:background="#ffffff"
        >
        <TextView
            android:id="@+id/text_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_setting"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_18"
            />

        <ImageView
            android:id="@+id/icon_setting"
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_17"
            android:src="@mipmap/next"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_19"

            />
    </RelativeLayout>


</RelativeLayout>