<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCCCCC"
    tools:context=".activity.UpdatePassActivity">

    <RelativeLayout
        android:id="@+id/relative_change"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="#ffffff"
        >

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_back"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            />
        <TextView
            android:id="@+id/text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_update_pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_25"
            android:textSize="@dimen/sp_20"
            />
    </RelativeLayout>
    <View
        android:id="@+id/view_fangzhurenzheng_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:layout_below="@+id/relative_change"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:orientation="horizontal"
        android:background="#ffffff"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_old_pass"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_16"
            />

        <EditText
            android:id="@+id/edit_old_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="请输入旧密码"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@null"
            />

        <View
            android:id="@+id/view_pass_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_15"
            android:layout_below="@+id/edit_old_pass"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_140"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_marginTop="@dimen/dp_15"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_new_pass"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_40"
            />

        <EditText
            android:id="@+id/edit_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="请输入旧密码"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@null"
            android:layout_marginTop="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            />

        <View
            android:id="@+id/view_pass_three"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/edit_new_pass"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sure_pass"
            android:layout_marginLeft="@dimen/dp_20"
            android:textSize="@dimen/sp_16"
            android:layout_below="@+id/view_pass_three"
            android:layout_marginTop="@dimen/dp_15"
            />

        <EditText
            android:id="@+id/edit_sure_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="重新输入密码"
            android:layout_marginLeft="@dimen/dp_100"
            android:background="@null"
            android:layout_marginTop="@dimen/dp_85"
            android:padding="@dimen/dp_10"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_sure_updaate"
        android:layout_width="@dimen/dp_320"
        android:layout_height="@dimen/dp_50"
        android:text="@string/text_sure_update"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_20"
        />

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <Button
             android:id="@+id/btn_pass_back"
             android:layout_width="@dimen/dp_360"
             android:layout_height="@dimen/dp_50"
             android:text="@string/text_back"
             android:textSize="@dimen/sp_16"
             android:textColor="#333333"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/dp_20"
             android:layout_marginLeft="@dimen/dp_20"
             android:layout_marginRight="@dimen/dp_20"
             />

     </RelativeLayout>

</LinearLayout>